# taut-rpc

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  SPEC.md  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_v0.1.0.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  question.md  spec_change.md
.github/workflows/: ci.yml  docs.yml  npm.yml  release.yml
crates/taut-rpc/: Cargo.toml
crates/taut-rpc-cli/: Cargo.toml
crates/taut-rpc-cli/src/: codegen.rs  lib.rs  main.rs  mcp.rs
crates/taut-rpc-cli/src/commands/: check.rs  gen.rs  inspect.rs  mcp.rs  mod.rs
crates/taut-rpc-cli/tests/: cli_lib_smoke.rs  ir_version_mismatch.rs
crates/taut-rpc-macros/: Cargo.toml
crates/taut-rpc-macros/src/: derive_taut_error.rs  derive_type.rs  derive_validate.rs  lib.rs  rpc_attr.rs
crates/taut-rpc-macros/tests/: trybuild.rs
crates/taut-rpc-macros/tests/ui/: derive-tauterror-on-struct-fail.rs  derive-tauterror-on-struct-fail.stderr  derive-validate-with-no-bounds-pass.rs  multi-arg-fail.rs  multi-arg-fail.stderr  non-async-fail.rs  non-async-fail.stderr  rpc-multi-arg-better-message.rs  rpc-on-self-method-fail.rs  rpc-on-self-method-fail.stderr  rpc-stream-no-await-fail.rs  rpc-stream-no-await-fail.stderr  rpc-stream-pass.rs  struct-pass.rs  type-on-generic-struct-fail.rs  type-on-generic-struct-fail.stderr  type-on-union-fail.rs  type-on-union-fail.stderr  validate-bare-struct-pass.rs  validate-min-on-string-fail.rs  validate-min-on-string-fail.stderr  validate-on-union-fail.rs  validate-on-union-fail.stderr  validate-pass.rs  validate-pattern-not-string-fail.rs  validate-pattern-not-string-fail.stderr
crates/taut-rpc/benches/: dispatch.rs
crates/taut-rpc/src/: dump.rs  error.rs  ir.rs  lib.rs  prelude.rs  procedure.rs  router.rs  type_map.rs  types.rs  validate.rs  wire.rs  ws.rs
crates/taut-rpc/tests/: codegen_snapshot.rs  integration.rs  mcp_manifest.rs  phase2.rs  phase3.rs  phase4.rs  phase4_e2e.rs  standard_error_catalog.rs
docs/: book.toml
docs/src/: SUMMARY.md  about.md  intro.md
docs/src/concepts/: architecture.md  errors.md  how-it-works.md  ir.md  type-mapping.md  validation.md  wire-format.md
docs/src/guides/: auth.md  deployment.md  getting-started.md  mcp.md  middleware.md  migrate-from-rspc.md  migrate-from-trpc.md  subscriptions.md  troubleshooting.md  validation.md
docs/src/reference/: beyond-0.1.md  changelog.md  cli.md  comparison.md  constraints.md  error-codes.md  faq.md  performance.md  roadmap.md  spec.md
docs/src/tutorials/: form-validation.md  realtime-chat.md  todo-app.md
examples/: README.md
examples/counter-sveltekit/: README.md
examples/counter-sveltekit/client/: .gitignore  package.json  svelte.config.js  vite.config.ts
examples/counter-sveltekit/client/src/: app.html
examples/counter-sveltekit/client/src/lib/: api.ts
examples/counter-sveltekit/client/src/routes/: +layout.ts  +page.svelte
examples/counter-sveltekit/server/: Cargo.toml
examples/counter-sveltekit/server/src/: main.rs
examples/phase1/: README.md
examples/phase1/client/: .gitignore  package-lock.json  package.json
examples/phase1/client/src/: main.ts
examples/phase1/server/: Cargo.toml
examples/phase1/server/src/: main.rs
examples/phase2-auth/: README.md
examples/phase2-auth/client/: package-lock.json  package.json
examples/phase2-auth/client/src/: main.ts
examples/phase2-auth/server/: Cargo.toml
examples/phase2-auth/server/src/: main.rs
examples/phase2-tracing/: README.md
examples/phase2-tracing/server/: Cargo.toml
examples/phase2-tracing/server/src/: main.rs
examples/phase3-counter/: README.md
examples/phase3-counter/client/: package-lock.json  package.json  tsconfig.json
examples/phase3-counter/client/src/: main.ts
examples/phase3-counter/server/: Cargo.toml
examples/phase3-counter/server/src/: main.rs
examples/phase4-validate/: README.md
examples/phase4-validate/client/: package-lock.json  package.json
examples/phase4-validate/client/src/: main.ts
examples/phase4-validate/server/: Cargo.toml
examples/phase4-validate/server/src/: main.rs
examples/smoke/: README.md
examples/smoke/client/: package-lock.json  package.json
examples/smoke/client/src/: main.ts
examples/smoke/server/: Cargo.toml
examples/smoke/server/src/: main.rs
examples/todo-react/: README.md
examples/todo-react/client/: index.html  package.json  tsconfig.json  vite.config.ts
examples/todo-react/client/src/: App.tsx  main.tsx
examples/todo-react/server/: Cargo.toml
examples/todo-react/server/src/: main.rs
npm/taut-rpc/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
npm/taut-rpc/src/: http.ts  index.ts  sse.ts
scripts/: smoke-all.sh
