[package]
name = "taut-rpc-cli"
version = "0.0.0"
description = "cargo subcommand for taut-rpc codegen"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "taut_rpc_cli"
path = "src/lib.rs"

[[bin]]
name = "cargo-taut"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
taut-rpc = { path = "../taut-rpc" }

[lints]
workspace = true
