[package]
name = "taut-rpc-cli"
version = "0.1.0"
description = "cargo taut subcommand: TS codegen, IR drift detection, MCP manifest, and IR inspection for taut-rpc."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage = "https://github.com/nktkt/taut-rpc"
documentation = "https://docs.rs/taut-rpc-cli"
keywords = ["taut-rpc", "rpc", "codegen", "cli", "typescript"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[lib]
name = "taut_rpc_cli"
path = "src/lib.rs"

[[bin]]
name = "cargo-taut"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
taut-rpc = { path = "../taut-rpc", version = "0.1.0" }

[lints]
workspace = true
