[package]
name = "taut-rpc"
version = "0.0.0"
description = "End-to-end type-safe RPC between Rust and TypeScript"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
futures.workspace = true
async-stream.workspace = true
tracing.workspace = true
async-trait.workspace = true
http.workspace = true
bytes.workspace = true
regex.workspace = true
taut-rpc-macros = { path = "../taut-rpc-macros", version = "0.0.0" }

[features]
default = []
ir-export = []
uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
# WebSocket subscription transport (SPEC §4.2). Off by default so users that
# only need queries / mutations / SSE don't pay for axum's `ws` feature flag
# (which itself pulls in tokio-tungstenite). Enabling `ws` mounts a
# `GET /rpc/_ws` route that multiplexes subscriptions over a single socket.
ws = ["axum/ws"]

[dependencies.uuid]
version = "1"
optional = true
features = ["serde"]

[dependencies.chrono]
version = "0.4"
optional = true
features = ["serde"]

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-stream = { workspace = true }
futures = { workspace = true }
taut-rpc-cli = { path = "../taut-rpc-cli" }

[lints]
workspace = true
