[package]
name = "smoke-server"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
async-stream = "0.3"
