[package]
name = "todo-react-server"
version = "0.0.0"
edition = "2021"
publish = false

# This package lives outside the workspace (examples are listed in the root
# Cargo.toml's `exclude`). All dependencies are pinned with explicit versions
# rather than `workspace = true` for that reason; only the two intra-repo
# crates are referenced via `path`.
[dependencies]
taut-rpc = { path = "../../../crates/taut-rpc" }
taut-rpc-macros = { path = "../../../crates/taut-rpc-macros" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
async-stream = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
